# sfml-animations

./: CMakeLists.txt  README.md  animation.hpp  build.sh  cell.hpp  cpp-animations.sln  main.cpp  utils.hpp
cpp-animations/: animation.cpp  cpp-animations.vcxproj  cpp-animations.vcxproj.filters  main.cpp  utils.hpp
headers/: animation.hpp  cell.hpp  utils.hpp
headers/demos/: gravity.hpp  pathfinder.hpp
